Fixes alignment issue

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -31,7 +31,7 @@
         > div {
             &.row {
                 padding-bottom: 30px;
-                display: inline-block;
+                display: block;
             }
         }
     }
